--- a/app/src/main/res/layout/dialogo_et.xml
+++ b/app/src/main/res/layout/dialogo_et.xml
@@ -7,7 +7,7 @@
 
 
     <EditText
-        android:id="@+id/etComments"
+        android:id="@+id/et_nombre_lugar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
@@ -18,11 +18,6 @@
         android:maxLines="2"
         android:minLines="1"
         android:scrollbars="vertical" />
-    <Button
-        android:id="@+id/bt_ingreso_lugar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:text="ENVIAR" />
+
 
 </LinearLayout>
